add counties png, fix minority png

--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -27,14 +27,17 @@ Schools record and report student attributes, but in many cases, it seems likely
 
 # Navigating the App
 
-The `{golem}` app (shown below, please be patient if it takes a moment to load) was built with the `{shinyWidgets}` package, which offers "conditional drop-down filtering" through its `selectizeGroup` module, for navigating multiple categories with high-cardinality. By reducing the subset of each filter with the other filters, this method helps to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) discussed it in more detail.
+The `{golem}` Shiny app (shown below, please be patient if it takes a moment to load) was built with the `{shinyWidgets}` package, which offers "conditional drop-down filtering" through its `selectizeGroup` module, for navigating multiple categories with high-cardinality. By reducing the subset of each filter with the other filters, this method helps to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) discussed it in more detail.
+
+In the title image of this post above, the app is filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left, try those filters, because the app initially shows all the subgroups and tests taken over the last 15 years, counting the same students in multiple groups. Once filtered, the population of public school students (Charter and DOE across all NYS counties) taking the test, should decline from 1.2 million to 900,000 over the period. When using the app, it is imperative to make sure that subgroups are selected which are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates.
 
 <iframe height="900" width="1000" frameborder="no" src="https://luceyda.shinyapps.io/nyedapp"> </iframe>
 
+Again using our "conditional drop-down filtering", the "Needs/Resource Category" is a NY State designation, which is helpful because it includes groups for NYC and for all Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" offers only the five NYC Counties ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND") in the County filter. 
 
-In the title image of this post, the app is filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left, try those filters, because the app initially shows all the subgroups and tests taken over the last 15 years, counting the same students in multiple groups. Once filtered, the population of public school students (Charter and DOE across all NYS counties) taking the test, should decline from 1.2 million to 900,000 over the period. When using the app, it is imperative to make sure that subgroups are selected which are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and possibly skew pass rates, while choosing S
+![NYED Data Explorer filtered for All Students at NYC Charters](images/all_students_nyc_counties.png)
 
-Again using our "conditional drop-down filtering", the "Needs/Resource Category" is a NY State designation, which is helpful because it includes groups for NYC and for all Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" offers only the five NYC Counties ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND") in the County filter. After selecting those counties, changing to "Needs/Resource Category" to "Charters" filters for only Charters in those counties (essentially all NYC Charters in the Schools filter). It is then possible to choose individual schools in "School" tab. This field does allow to start typing a name which speeds up finding the school when there are many still in the subset. The results shown on the "Summary" tab aggregate all of the schools filtered with the tabs.
+After selecting those counties, changing to "Needs/Resource Category" to "Charters" filters for only Charters in those counties (essentially all NYC Charters in the Schools filter). It is then possible to choose individual schools in "School" tab. This field does allow to start typing a name which speeds up finding the school when there are many still in the subset. The results shown on the "Summary" tab aggregate all of the schools filtered with the tabs.
 
 ![NYED Data Explorer filtered for All Students at NYC Charters](images/nyed_nyc_charters.png)
 
@@ -46,11 +49,11 @@ We can switch our single subgroup from "All Students" to two subgroups, such as 
 
 ![NYED Data Explorer filtered for African American and Latino students at South Bronx Classical](images/nyed_sbc_math.png)
 
-With these filters, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was almost no "learning loss" due to Covid, as there has been widely across most other schools in the United States. "Lift" shows that students at South Bronx Classical are proficient in Math at almost 3x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 138%, because the DOE pass rates are higher in that subject. Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider looking at Success, Icahn, Bronx Excellence and Zeta, which all have had excellent results over time, and there are surely others.
+With these filters, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was almost no "learning loss" due to Covid, as there has been widely across most other schools in the United States. "Lift" shows that students at South Bronx Classical are proficient in Math at almost 3x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 138%, because the DOE pass rates are higher in that subject. Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
 
 ![NYED Data Explorer filtered for Students with Disabilities at South Bronx Classical](images/nyed_swb_math.png)
 
-Although entry is by blind lottery, critics sometimes say that charters avoid difficult cases, but 106 Students with Disabilities (about 10% of all Classical test takers) were about 7x more likely to demonstrate proficiency in Math than at a district school. This is more a comment on the very small number of passing SWD at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most scholars pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
+Although entry to NY public charter schools is by blind lottery, critics sometimes say that charters avoid difficult cases, but 106 Students with Disabilities (about 10% of all Classical test takers) were about 7x more likely to demonstrate proficiency in Math than at a district school. This is more a comment on the very small number of passing SWD at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most scholars pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
 
 # Future additions
 
