--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -31,7 +31,9 @@ The `{golem}` Shiny app (shown below, please be patient if it takes a moment to 
 
 In the title image of this post above, the app is filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left of the app (embedded below), try those filters, because when loaded, the app shows all the subgroups and tests taken over the last 15 years (counting the same students in multiple groups). Once filtered, the population of public school students (Charter and DOE across all NYS counties) taking the ELA, should decline from 1.2 million in 2007 down to to 900,000 over the period. When using the app, it is imperative to make sure that subgroups are selected which are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates. For example, choosing all of the race/ethnicity groups or "Scholars with Disabilities" and "General Education" should be fine.
 
-<iframe height="900" width="1000" frameborder="no" src="https://luceyda.shinyapps.io/nyedapp"> </iframe>
+
+<iframe width="600" height="800" scrolling="no" frameborder="0" src="https://luceyda.shinyapps.io/nyedapp"> title="Embedded NYED Data Explorer App" allowfullscreen</iframe>
+
 
 Again using our "conditional drop-down filtering", the "Needs/Resource Category" is a NY State designation, which is helpful because it includes groups for NYC and for all Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" offers only the five NYC Counties ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND") in the County filter. 
 
