rewrite of app usage section

--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -11,7 +11,7 @@ tags: ["connecticut", "charterschools", "shiny"]
 
 # Introduction
 
-Three years ago, in the course of building personal projects in R using public data from Connecticut, I wrote [How Does Stamford Charter School for Excellence do it?](https://redwallanalytics.com/2019/11/02/how-does-stamford-charter-school-for-excellence-do-it/). "Stamford Excellence" was achieving remarkable results in a district with proficiency below 50%. Then and now, the school receives little recognition, and their effort to open a second Connecticut location in Norwalk, has been stymied as of this writing. My interest in these exceptional schools, and possibly the blog post, led to a new position as Director of Data & Research at another high-performing Bronx charter school network, [South Bronx Classical Charter Schools](https://classicalcharterschools.org). Naturally, when I discovered 15 years of [NYED assessment data](https://data.nysed.gov), the interest to clean and free this data for others to discover in a Shiny app, was immediate. The opportunity to also feature Classical's stand-out performance didn't hurt my motivation, although this post and the app were built in my spare time, and do not represent the opinions of South Bronx Classical Charter Schools. Unlike many past Redwall posts, this one will not have code, and will be primarily to show how to use the app, built with `{golem}` and `{shinyWidgets}`.
+Three years ago, in the course of building personal projects in R using public data from Connecticut, I wrote [How Does Stamford Charter School for Excellence do it?](https://redwallanalytics.com/2019/11/02/how-does-stamford-charter-school-for-excellence-do-it/). "Stamford Excellence" was achieving remarkable results in a district with proficiency below 50%. Then and now, the school receives little recognition, and their effort to open a second Connecticut location in Norwalk, has been stymied as of this writing. My interest in these exceptional schools, and possibly the blog post, led to a new position as Director of Data & Research at another high-performing Bronx charter school network, [South Bronx Classical Charter Schools](https://classicalcharterschools.org). Naturally, when I discovered 15 years of [NYED assessment data](https://data.nysed.gov), the interest to clean and free this data for others to discover in a Shiny app, was immediate. The opportunity to also feature Classical's stand-out performance didn't hurt my motivation, although this post and the app were built in my spare time, and do not represent the opinions of South Bronx Classical Charter Schools. Unlike many past Redwall posts, this one will not have code, and will be primarily to explain the data and show how to use the app.
 
 # Classical Charter Schools and the Charter Debate
 
@@ -19,7 +19,7 @@ Classical Charter Schools operates four schools demonstrating outstanding academ
 
 # Thoughts on NYED and Open Public Data
 
-As with every public data site I have worked with, the NYED's disclosure strategy sometimes feels like it intends to make it hard to access a clean longitudinal data set. Disclosures occur annually, and are often in the inconvenient form of a MS Access Database, while other years shift to csv, xlsx or tab separated formats. Sometimes the Access databases include tables for enrollment, but leave them out in other years. In some years, only the current year is disclosed, and others also include the prior year. I was able to extract and separate these painfully, year-by-year from the command line using `mdbtools`. When the number of scholars in a group is below a threshold, fields are suppressed, which is common, but the NYED data denotes these cases with varying notations in different years. Sometimes, assessment data is disclosed in tables by grade, and others, all grades are stacked together in one table. Disclosed subgroups are usually male/female and ethnicity, but several years include ethnic group by gender. Important fields are added, and then disappear, such as in 2022, dropping "Mean Scale Score", which showed the average score of a cohort at a school in most of the past years. As a result, I will concentrate on the "Pass Rate" for now, which is the number of students scoring in Level 3 or 4 divided by total test takers. The cutoffs for levels change every year as does the test difficulty, so "pass rates" are also not an objective measure over time.
+As with every public data site I have worked with, the NYED's disclosure strategy sometimes feels like it intends to make it hard to access a clean longitudinal data set. Disclosures occur annually, and are often in the inconvenient form of a MS Access Database, while other years shift to csv, xlsx or tab separated formats. Sometimes the Access databases include tables for enrollment, but leave them out in other years. In some years, only the current year is disclosed, and others also include the prior year. I was able to extract and separate these painfully, year-by-year from the command line using `mdbtools`. When the number of students in a group is below a threshold, fields are suppressed, which is common, but the NYED data denotes these cases with varying notations in different years. Sometimes, assessment data is disclosed in tables by grade, and others, all grades are stacked together in one table. Disclosed subgroups are usually male/female and ethnicity, but several years include ethnic group by gender. Important fields are added, and then disappear, such as in 2022, dropping "Mean Scale Score", which showed the average score of a cohort at a school in most of the past years. As a result, I will concentrate on the "Pass Rate" for now, which is the number of students scoring in Level 3 or 4 divided by total test takers. The cutoffs for levels change every year as does the test difficulty, so "pass rates" are also not an objective measure over time.
 
 # Data Collection Considerations
 
@@ -27,40 +27,40 @@ Schools record and report student attributes, but in many cases, it seems likely
 
 # Navigating the App
 
-The `{golem}` Shiny app (shown below, please be patient if it takes a moment to load) was built with the `{shinyWidgets}` package, which offers "conditional drop-down filtering" through its `selectizeGroup` module, for navigating multiple categories with high-cardinality. By reducing the subset of each filter with the other filters, this method helps to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) discussed it in more detail.
-
-In the title image of this post above, the app is filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left of the app (embedded below), try those filters, because when loaded, the app shows all the subgroups and tests taken over the last 15 years (counting the same students in multiple groups). Once filtered, the population of public school students (Charter and DOE across all NYS counties) taking the ELA, should decline from 1.2 million in 2007 down to to 900,000 over the period. When using the app, it is imperative to make sure that subgroups are selected which are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates. For example, choosing all of the race/ethnicity groups or "Scholars with Disabilities" and "General Education" should be fine.
+The interactive `{golem}` Shiny app, which will be shown below (please be patient if it takes a moment to load), was built with the `{shinyWidgets}` package, which has the `selectizeGroup` module allowing "conditional drop-down filtering". By reducing the subset of each filter with the other filters, it is possible to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) for more detail.
 
 
-<iframe width="600" height="800" scrolling="no" frameborder="0" src="https://luceyda.shinyapps.io/nyedapp"> title="Embedded NYED Data Explorer App" allowfullscreen</iframe>
+<iframe width="650" height="800" scrolling="no" frameborder="0" src="https://luceyda.shinyapps.io/nyedapp"> title="Embedded NYED Data Explorer App" allowfullscreen</iframe>
 
 
-Again using our "conditional drop-down filtering", the "Needs/Resource Category" is a NY State designation, which is helpful because it includes groups for NYC and for all Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" offers only the five NYC Counties ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND") in the County filter. 
+In the title image at the very beginning of this post, the app is shown filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left of the interactive app, try those filters, because when loaded, the app shows all subgroups and tests taken over the last 15 years (counting the same students in multiple groups). Once filtered, the population students taking the ELA (including both DOE and charter public schools), should decline from 1.2 million in 2007 down to to 900,000 last year. When using the app, it is important to make sure that the subgroups selected are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates.
 
-![NYED Data Explorer filtered for All Students at NYC Charters](images/all_students_nyc_counties.png)
+Again using our "conditional drop-down filtering", the "Needs/Resource Category" labels are NY State classifications, which is helpful because it includes groups for NYC (DOE schools) and for all NYS Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" reduces the County selections offered to only the desired five ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND"). Once NYC counties and the Needs/Resource Group are selected, the "Lift" column populates. "Lift" is defined as the aggregated pass rate of the selected group, divided by that of all the other test takers at schools in those same geographies and subgroups (but not including the selected schools). So in this case, the "Lift" indicates that 308,000 students in NYC DOE schools have a pass rate, which in 2022, is 91.3% of the other schools not in the subset (in this case charter schools)
 
-After selecting those counties, changing to "Needs/Resource Category" to "Charters" filters for only Charters in those counties (essentially all NYC Charters in the Schools filter). It is then possible to choose individual schools in "School" tab. This field does allow to start typing a name which speeds up finding the school when there are many still in the subset. The results shown on the "Summary" tab aggregate all of the schools filtered with the tabs.
+![NYED Data Explorer filtered for All Students in NYC](images/all_students_nyc_counties.png)
+
+After selecting those counties, changing to "Needs/Resource Category" to "Charters" now filters for only charters in those counties (essentially all NYC Charters), which flips the "Lift" for 2022 to the inverse of the previous example for the 66,000 students. The number of Charter students taking the ELA test has risen from ~6k in 2007 to ~66k in 2022. The "Lift" for Math at charters relative to DOE schools is higher than for ELA at 18%. On the face of it, a 10% higher pass rate might not be so impressive, but the cohort at charter schools is only about 20% of all NYC students, so the proficiency of the overall system was significantly impacted by these schools.
 
 ![NYED Data Explorer filtered for All Students at NYC Charters](images/nyed_nyc_charters.png)
 
-As shown above, in the case of ELA, NYC Charters had a "Lift" of 9.5% when filtered for "All Students" in NYC (the "Lift" of 18% for Math is not shown). "Lift" is defined as the aggregated pass rate of the selected group, divided by that of all the other test takers at schools in those same geographies and subgroups (but not including the selected schools). The number of Charter students taking the ELA test has risen from ~6k in 2007 to ~66k in 2022. On the face of it, a 10% higher pass rate might not be so impressive, but the cohort at charter schools is only about 20% of all NYC students, so the proficiency of the overall system was significantly impacted by these schools. In addition, the demographics of the charter schools is also much different than the overall NYC population of students, and this matters, as we will show.
+The demographics of the charter schools are also much different than the overall NYC population of students, and this matters, as we will now show. We can switch our single subgroup from "All Students" to the two largest subgroups at most charters, "Black or African American" and "Hispanic or Latino" (shown below). With these filters, the "Lift" for NYC charter's ELA pass rate rises to 40%, because attending charter schools has a much bigger effect for these two subgroups. We haven't shown, but leave it for the user to switch Test to "Math" to see the impressive 90% "Lift" for Math for charter over DOE students. In the case of South Bronx Classical Charters, almost 90% of students fall into these two subgroups, representing a more appropriate basis for comparison. 
 
 ![NYED Data Explorer filtered for African American and Latino Students at NYC Charters](images/nyed_minority_charters.png)
 
-We can switch our single subgroup from "All Students" to two subgroups, such as "Black or African American" and "Hispanic or Latino" (shown above), because these are mutually exclusive. The "Lift" in ELA rises to 40% for ELA, when the subset is compared to only to other NYC scholars in these subgroups, but not at charter schools. So attending charter schools has a much bigger effect for these two subgroups. We haven't shown, but leave it for the user to switch Test to "Math" to see the impressive 90% "Lift" for Math for charter over DOE students). In the case of South Bronx Classical Charters, almost 90% of students fall into these two subgroup categories, representing a more appropriate basis for comparison. In the next step, I will filter to see the lift of the Classical Network against the most relevant cohort of those students in the NYC DOE system.
+At Classical like many NYC charters, about 90% of students fall into these two subgroups, so it makes sense to see the Lift relative to the most relevant cohort of students in the NYC DOE system. There are still a lot of schools to scroll through if the goal is to further subset, so starting to type the name of the desired schools can speed up selection. Once the Classical schools are selected, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was almost no "learning loss" due to Covid, as there has been widely across most other schools in the United States. "Lift" shows that students at South Bronx Classical are proficient in Math at about 3.7x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 238%, because the DOE pass rates are higher in that subject.
 
 ![NYED Data Explorer filtered for African American and Latino students at South Bronx Classical](images/nyed_sbc_math.png)
 
-With these filters, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was almost no "learning loss" due to Covid, as there has been widely across most other schools in the United States. "Lift" shows that students at South Bronx Classical are proficient in Math at almost 3x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 138%, because the DOE pass rates are higher in that subject. Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
+Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
 
 ![NYED Data Explorer filtered for Students with Disabilities at South Bronx Classical](images/nyed_swb_math.png)
 
-Although entry to NY public charter schools is by blind lottery, critics sometimes say that charters avoid difficult cases, but 106 Students with Disabilities (about 10% of all Classical test takers) were about 7x more likely to demonstrate proficiency in Math than at a district school. This is more a comment on the very small number of passing SWD at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most scholars pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
+Although entry to NY public charter schools is by blind lottery, critics have sometimes charged that charters avoid difficult cases, but 106 Students with Disabilities (about 10% of all Classical test takers) were about 7x more likely to be proficient in Math. This is more a comment on the very small number of passing SWD at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most students pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
 
 # Future additions
 
-Making the data cleaning steps reproducible is one goal, but given the number of manual steps to collect the raw data out of MS Access databases, this is not easy. Now that the data is mostly clean, and the app is up and running, I will be adding further tables and graphics to aid in explorations to compare the trajectory of individual schools. Approximately 80 charters have come and gone for poor performance. It would be interesting to see how many failing DOE schools have also shut down, and the relationship between that and performance. We have narrowed our filters down to Counties, but zip codes might be even more revealing and not difficult to add. In his book "Charter School and their Enemies", Thomas Sowell showed the striking differentials in performance of students in charter and DOE schools sharing the exact same buildings, so even this would not be too difficult to add.
+Making the data cleaning steps reproducible is one goal, but given the number of manual steps to collect the raw data out of MS Access databases, this is not easy. Now that the data is mostly clean, and the app is up and running, I will be adding further tables and graphics to aid in explorations to compare the trajectory of individual schools. Approximately 80 charters have come and gone for poor performance. It would be interesting to see how many failing DOE schools have also shut down, and the relationship between that and performance. We have narrowed our filters down to Counties, but zip codes might be even more revealing and not difficult to add. I would like to add the ability to download subsets of the data and also to extract png images of future graphics.
 
 # Conclusion
 
-The goal of the `NYED Data Dashboard`, as with many of my past "Redwall Analytics" projects, was to free valuable data from an inaccessible open repository, especially where the honesty surrounding the debate might be improved. My walk through is opinionated, but I think is supported by data, which is available for all to test and reproduce. Although I focused on NYC schools, the data includes all NYS public schools. The comments section of this blog is open, and I would welcome feedback on how to improve the app, different interpretations of the data or how to boost awareness of it.
+The goal of the `NYED Data Dashboard`, as with many of my past "Redwall Analytics" projects, was to free valuable data from an inaccessible open repository, especially where the honesty surrounding the debate might be improved. My walk through is opinionated, but I hope is supported by data, which is now available for all to test and reproduce. Although I focused on NYC schools, the data includes all NYS public schools. The comments section of this blog is open, and I would welcome feedback on how to improve the app, different interpretations of the data or how to boost awareness of it.
