--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -39,23 +39,23 @@ Again using our "conditional drop-down filtering", the "Needs/Resource Category"
 
 ![NYED Data Explorer filtered for All Students in NYC](images/all_students_nyc_counties.png)
 
-After selecting those counties, changing to "Needs/Resource Category" to "Charters" now filters for only charters in those counties (essentially all NYC Charters), which flips the "Lift" for 2022 to the inverse of the previous example for the 66,000 students. The number of Charter students taking the ELA test has risen from ~6k in 2007 to ~66k in 2022. The "Lift" for Math at charters relative to DOE schools is higher than for ELA at 18%. On the face of it, a 10% higher pass rate might not be so impressive, but the cohort at charter schools is only about 20% of all NYC students, so the proficiency of the overall system was significantly impacted by these schools.
+After selecting those counties, changing to "Needs/Resource Category" to "Charters" now filters for only charters in those counties (essentially all NYC Charters), which flips the "Lift" for 2022 to the inverse of the previous example. The number of Charter students taking the ELA test has risen from ~6k in 2007 to ~66k in 2022 as new schools have opened and more students at those schools reached the upper grades. The "Lift" for Math at charters relative to the baseline DOE schools is higher than for ELA at 18%.
 
 ![NYED Data Explorer filtered for All Students at NYC Charters](images/nyed_nyc_charters.png)
 
-The demographics of the charter schools are also much different than the overall NYC population of students, and this matters, as we will now show. We can switch our single subgroup from "All Students" to the two largest subgroups at most charters, "Black or African American" and "Hispanic or Latino" (shown below). With these filters, the "Lift" for NYC charter's ELA pass rate rises to 40%, because attending charter schools has a much bigger effect for these two subgroups. We haven't shown, but leave it for the user to switch Test to "Math" to see the impressive 90% "Lift" for Math for charter over DOE students. In the case of South Bronx Classical Charters, almost 90% of students fall into these two subgroups, representing a more appropriate basis for comparison. 
+The demographics of the charter schools are also much different than the overall NYC population of students, and this matters, as we will now show. We can switch our single subgroup from "All Students" to the two largest subgroups at most charters, "Black or African American" and "Hispanic or Latino" (shown below). With these filters, the "Lift" for NYC charter's ELA pass rate rises to 40%, because attending charter schools has a much bigger effect for these two subgroups. We haven't shown, but leave it for the user to switch Test to "Math" to see the impressive 90% "Lift" for Math for charter over DOE students.
 
 ![NYED Data Explorer filtered for African American and Latino Students at NYC Charters](images/nyed_minority_charters.png)
 
-At Classical like many NYC charters, about 90% of students fall into these two subgroups, so it makes sense to see the Lift relative to the most relevant cohort of students in the NYC DOE system. There are still a lot of schools to scroll through if the goal is to further subset, so starting to type the name of the desired schools can speed up selection. Once the Classical schools are selected, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was almost no "learning loss" due to Covid, as there has been widely across most other schools in the United States. "Lift" shows that students at South Bronx Classical are proficient in Math at about 3.7x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 238%, because the DOE pass rates are higher in that subject.
+At Classical like many NYC charters, about 90% of students also fall into these two subgroups, so it makes sense to see the Lift comparing the most relevant cohort of students. Though we have filtered down to charters in NYC bouroughs, there are still a lot of schools to scroll through to further subset, so starting to type the name of the desired schools can speed up selection. Once the Classical schools are selected, we can see that almost all South Bronx Classical Charter students are tested, and just under 90% are "proficient" in Math, and there was very little "learning loss" due to Covid (as there has been widely across most other schools in the United States). "Lift" shows that students at South Bronx Classical are proficient in Math at about 3.7x the rate as those in the DOE system. Pass rates for ELA are almost the same in absolute terms, but "Lift" is lower than for Math at 238%, because the DOE pass rates are higher in that subject.
 
 ![NYED Data Explorer filtered for African American and Latino students at South Bronx Classical](images/nyed_sbc_math.png)
 
-Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
+Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider also looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
 
 ![NYED Data Explorer filtered for Students with Disabilities at South Bronx Classical](images/nyed_swb_math.png)
 
-Although entry to NY public charter schools is by blind lottery, critics have sometimes charged that charters avoid difficult cases, but 106 Students with Disabilities (about 10% of all Classical test takers) were about 7x more likely to be proficient in Math. This is more a comment on the very small number of passing SWD at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most students pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
+Although entry to NY public charter schools is by lottery, critics have sometimes charged that charters avoid difficult cases. Changing the subgroup to "Students with Disabilities", the 106 Students taking the Math test at Classical were about 7x more likely to be proficient. This is more a comment on the very small number of passing SWD students at district schools, but is still striking to see what is possible. Students with Disabilities at Classical did better in absolute terms than the general population at most schools in the State. Another interesting subgroup, which is virtually gone from Classical in most years, are English Language Learners. Although 30% of entering students are ELL, with such high pass rates, most students pass the ELA in 3rd or 4th grade, and "test out" of ELL status.
 
 # Future additions
 
